# solvalmon

./: .gitignore  Cargo.toml  README.md  config.json  sentry.json
pki/: README.md
scripts/: create_auth_cert.sh  create_ca.sh  create_cert.sh
src/: config.rs  lib.rs  main.rs  responder.rs
src/auth/: auth.rs  lib.rs  mod.rs  signed_payload.rs
src/failover/: failover.rs  mod.rs
src/handlers/: error.rs  mod.rs  post.rs  set_identity.rs  stats.rs  status.rs  tower.rs
src/monitor/: config.rs  monitor.rs
src/sentry/: client.rs  config.rs  mod.rs  sentry.rs
src/summary/: summary.rs
src/webhook/: discord.rs  mod.rs  telegram.rs
