[package]
name = "solvalmon"
version = "0.1.0"
edition = "2021"

[dependencies]
agave-validator = "3.1.0"
base64 = "0.22.1"
chrono = "0.4.41"
clap = { version = "4.5.23", features = ["derive"] }
futures = "0.3.31"
hostname = "0.4.0"
reqwest =  { version = "0.12.12", features = ["native-tls", "json"]}
rocket = { version = "0.5.1", features = ["json", "mtls"] }
serde = "1.0.216"
serde_json = "1.0.134"
sha256 = "1.5.0"
solana-client = "3.0.0"
solana-commitment-config = "3.1.1"
solana-sdk = "3.0.0"
solana-vote-program = "3.1.11"
tabled = "0.17.0"
tokio = "1.42.0"
